--- a/Resources/css/media.css
+++ b/Resources/css/media.css
@@ -31,10 +31,17 @@
     align-items: center;
   }
 
+  #contact {
+    height: 100vh;
+    width: 100vw;
+  }
+
   .portfolio-items {
   flex-flow: column wrap;
   justify-content: flex-start;
   align-items: flex-start;
+  padding-left: 50%;
+  padding-right: 50%;
   }
 
   .image-container {
@@ -71,12 +78,21 @@
     justify-content: center;
     align-items: center;
   }
-
+  #contact {
+    height: 100vh;
+    background: cover;
+    margin-bottom: 0;
+    border-bottom: 0;
+    padding-bottom: 0;
+    overflow: hidden;
+  }
   .portfolio-items {
   flex-flow: column wrap;
   justify-content: center;
   align-items: stretch;
   flex-grow: 1;
+  padding-left: 50%;
+  padding-right: 50%;
   }
 
   .image-container {
@@ -105,10 +121,13 @@
   }
   #home, #portfolio, #about, #contact {
     width: 100%;
-    height: 80%;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
+  }
+  #contact {
+    height: 100vh;
   }
   .portfolio-items {
   flex-flow: column wrap;
